[package]
name = "zabbix-lld-ws"
version = "1.0.0"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.87"

clap = "4.5.17"

config = { version = "0.14.0", features = ["yaml"] }

reqwest = { version = "0.12.7", features = ["blocking", "json"] }

openssl = { version = "0.10.66", features = ["vendored"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_repr = "0.1.19"
serde_json = "1.0.128"

zabbix-api = { version = "0.3.1" }

regex = "1.10.6"

log = "0.4.22"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.11.5"
fake = "2.9.2"
