[package]
name = "zabbix-lld-ws"
version = "1.1.0"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.98"

clap = "4.5.38"

config = { version = "0.15.1", features = ["yaml"] }

reqwest = { version = "0.12.15", features = ["blocking", "json"] }

openssl = { version = "0.10.72", features = ["vendored"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_repr = "0.1.20"
serde_json = "1.0.140"

zabbix-api = { branch = "0.4.0", git = "https://github.com/lebe-dev/zabbix-api-rs" }

regex = "1.11.1"

log = "0.4.27"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.11.8"
fake = "4.3.0"
